# kamu-engine-spark

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  DEVELOPER.md  Makefile  README.md  build.sbt
adapter/: Cargo.toml  build.rs
adapter/proto/: kamu_adapter.proto
adapter/src/: adapter.rs  generated.rs  grpc.rs  lib.rs  main.rs  server.rs  spark.rs
adapter/tests/: mod.rs
adapter/tests/integration/: mod.rs  test_validate_query.rs
adapter/tests/tests/: test_validate_query.rs
adapter/tests/utils/: container_runtime.rs  engine_container.rs  engine_runner.rs  mod.rs
image/: Dockerfile  config.json  entrypoint.sh  spark-defaults.conf
project/: Versions.scala  plugins.sbt
src/main/resources/: reference.json
src/main/scala/: Config.scala  FSUtils.scala  Schemas.scala  Transform.scala  TransformApp.scala  TransformTask.scala
src/main/scala/dev/kamu/core/transform/streaming/: AppConfig.scala  Batcher.scala  Config.scala  FSUtils.scala  Transform.scala  TransformApp.scala  TransformExtended.scala  TransformTask.scala
src/main/scala/dev/kamu/engine/spark/: DFUtils.scala  Op.scala  RawQuery.scala  RawQueryApp.scala  Transform.scala  TransformApp.scala
src/main/scala/dev/kamu/engine/spark/ingest/: AppConf.scala  Ingest.scala  IngestApp.scala
src/main/scala/dev/kamu/engine/spark/transform/: AppConfig.scala  Transform.scala  TransformApp.scala  TransformDef.scala  TransformExtended.scala
src/main/scala/org/apache/spark/sql/: DFHelper.scala
src/test/scala/: SCD2JoinTest.scala  StreamJoinTest.scala
src/test/scala/dev/kamu/core/transform/streaming/: AdvancedTemporalJoinTest.scala  AdvancedTemporalJoinTest2.scala  AggregationTest.scala  JoinTest.scala  ProjectionTest.scala  SCD2JoinTest.scala  StreamJoinTest.scala  TemporalJoinTest.scala  TestUtils.scala
src/test/scala/dev/kamu/engine/spark/: AdvancedTemporalJoinTest.scala  AdvancedTemporalJoinTest2.scala  AggregationTest.scala  EngineRunner.scala  JoinTest.scala  KamuDataFrameSuite.scala  ParquetHelpers.scala  ProjectionTest.scala  SCD2JoinTest.scala  StreamJoinTest.scala  TemporalJoinTest.scala
src/test/scala/dev/kamu/engine/spark/ingest/: DataFrameDigestTest.scala  EngineIngestTest.scala  EngineMetgeStrategySnapshotTest.scala  GeoJsonTest.scala  MergeStrategyAppendTest.scala  MergeStrategyLedgerTest.scala  MergeStrategySnapshotTest.scala  ShapefileTest.scala  TimeSeriesUtilsTest.scala  WatermarkTest.scala
src/test/scala/dev/kamu/engine/spark/test/: DataHelpers.scala  (+14 more)
(+15 files in other folders)
