[package]
name = "kamu-engine-spark-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kamu
# opendatafabric = { git = "https://github.com/kamu-data/kamu-cli", branch = "master" }
opendatafabric = { path = "../../kamu-cli/opendatafabric" }
container-runtime = { path = "../../kamu-cli/utils/container-runtime" }

tonic = "*"
prost = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

# Tracing / logging / telemetry
tracing = "*"  
tracing-subscriber = "*"
tracing-log = "*"
tracing-bunyan-formatter = "*"

[dev-dependencies]
serde = { version = "*", features = ["derive"] }
serde_with = "*"
serde_yaml = "*"

chrono = { version = "*", features = ["serde"] }
url = { version = "*", features = ["serde"] }
thiserror = "*"  # Structured error derivations

rand = "^0.8"
regex = "*"
libc = "*"
