[package]
name = "kamu-engine-spark-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kamu
opendatafabric = { git = "https://github.com/kamu-data/kamu-cli", branch = "odf_engine_adapter" }
# opendatafabric = { path = "../../kamu-cli/opendatafabric" }

tonic = "*"
prost = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tokio-stream = "*"

# Tracing / logging / telemetry
tracing = "*"  
tracing-subscriber = "*"
tracing-log = "*"
tracing-bunyan-formatter = "*"

[dev-dependencies]
container-runtime = { git = "https://github.com/kamu-data/kamu-cli", branch = "odf_engine_adapter" }
# container-runtime = { path = "../../kamu-cli/utils/container-runtime" }

chrono = { version = "*", features = ["serde"] }
libc = "*"
rand = "^0.8"
thiserror = "*"  # Structured error derivations
